--- a/quart2.html
+++ b/quart2.html
@@ -1,7 +1,3 @@
-<!-- Infográficos -> Corel Draw, Ilustrator, Inkscape
-Gráficos estastísticos -> Power BI, Tableau, Qlik Sense
-Especificação via programação -> R, Python, JavaScript, C++ -->
-
 <!DOCTYPE html>
 
 <html>
@@ -9,6 +5,7 @@ Especificação via programação -> R, Python, JavaScript, C++ -->
 	<head>
 		<title>Quarteto 2</title>
 		<link href="quart2.css" rel="stylesheet">
+		<link rel="sortcut icon" href="4.png">
 	</head>
 	
 	<body>
@@ -16,8 +13,6 @@ Especificação via programação -> R, Python, JavaScript, C++ -->
 	<p><h1>Quarteto de Anscombe</h1></p>
 
 	<svg width="2000" height="1400">
-	
-	<!-- Coordenadas -->
 			
 			<rect x="0" y="0" width="2000px" height="1400px" fill="black" stroke="grey" stroke-width="10px"/>
 			
@@ -38,45 +33,3 @@ Especificação via programação -> R, Python, JavaScript, C++ -->
 	</body>
 	
 </html>
-
-<!--
-
-0	-110	0	58	    -200	146
-0	-119	0	18	    0	    119
-0	-116	0	-516	-500	-13
-0	4	    0	170	    -100	-3
-0	-93	    0	52	    -300	-14
-0	186	    0	112	    -600	292
-0	111	    0	116	    200	    199
-0	116	    0	-113	1500	-824
-0	171	    0	269	    -400	528
-0	-244	0	-160	100	   -309
-0	94	    0	-5	    300	   -121
-
-1000 596 1000 486  1000	654	800	 742
-800	 705 800  586  800	723	800	 824
-1300 642 1300 526  1300	126	800	 629
-900	 519 900  523  900	689	800	 516
-1100 567 1100 474  1100 619	800	 553
-1400 404 1400 590  1400 516	800	 696
-600	 676 600  787  600	792	800	 875
-400	 974 400  1090 400  861 1900 150
-1200 316 1200 487  1200 585 800  844
-700	 918 700  674  700	758	800	 609
-500	 832 500  926  500	827	800	 711
-
-     I 	            II           	III 	        IV
-x 	    y    	x 	    y    	x    	y   	x   	y
-10,0 	8,04 	10,0 	9,14 	10,0 	7,46 	8,0 	6,58
-8,0 	6,95 	8,0 	8,14 	8,0 	6,77 	8,0 	5,76
-13,0 	7,58 	13,0 	8,74 	13,0 	12,74 	8,0 	7,71
-9,0 	8,81 	9,0 	8,77 	9,0 	7,11 	8,0 	8,84
-11,0 	8,33 	11,0 	9,26 	11,0 	7,81 	8,0 	8,47
-14,0 	9,96 	14,0 	8,10 	14,0 	8,84 	8,0 	7,04
-6,0 	7,24 	6,0 	6,13 	6,0 	6,08 	8,0 	5,25
-4,0 	4,26 	4,0 	3,10 	4,0 	5,39 	19,0 	12,50
-12,0 	10,84 	12,0 	9,13 	12,0 	8,15 	8,0 	5,56
-7,0 	4,82 	7,0 	7,26 	7,0 	6,42 	8,0 	7,91
-5,0 	5,68 	5,0 	4,74 	5,0 	5,73 	8,0 	6,89 
-
--->
