--- a/quart4.html
+++ b/quart4.html
@@ -5,7 +5,7 @@
 	<head>
 		<title>Quarteto 3</title>
 		<meta charset="UTF-8">
-		<link href="botao.css" rel="stylesheet">
+		<link href="quart4.css" rel="stylesheet">
 		<link rel="sortcut icon" href="4.png">
 	</head>
 	
