--- a/quart5.html
+++ b/quart5.html
@@ -13,12 +13,20 @@
 
 	<p><h1>Quarteto de Anscombe</h1></p>
 	
+	<p class="texto">O Quarteto de Anscombe são quatro conjuntos de dados que têm estatísticas descritivas quase idênticas,</p>
+	
+	<p class="texto">mas distribuições muito diferentes e aparências muito distintas quando exibidos graficamente.</p>
+	
+	<h1></h1>
+	
 		<div class="botoes">
 		<button id="botao_1">Conjunto 1</button>
 		<button id="botao_2">Conjunto 2</button>
 		<button id="botao_3">Conjunto 3</button>
 		<button id="botao_4">Conjunto 4</button>
 		</div>
+		
+	<h1></h1>
  
 	<script src="https://code.jquery.com/jquery-2.1.0.js"></script>
 	
