--- a/quart5.html
+++ b/quart5.html
@@ -87,108 +87,108 @@
 	
 	conj_1.addEventListener("click", ()=> {
 		c1.style.animation = "";
-		setTimeout(() => c1.style.animation = "pulse1_c1 10s");
+		setTimeout(() => c1.style.animation = "pulse1_c1 60s");
 		c2.style.animation = "";
-		setTimeout(() => c2.style.animation = "pulse1_c2 10s");
+		setTimeout(() => c2.style.animation = "pulse1_c2 60s");
 		c3.style.animation = "";
-		setTimeout(() => c3.style.animation = "pulse1_c3 10s");
+		setTimeout(() => c3.style.animation = "pulse1_c3 60s");
 		c4.style.animation = "";
-		setTimeout(() => c4.style.animation = "pulse1_c4 10s");
+		setTimeout(() => c4.style.animation = "pulse1_c4 60s");
 		c5.style.animation = "";
-		setTimeout(() => c5.style.animation = "pulse1_c5 10s");
+		setTimeout(() => c5.style.animation = "pulse1_c5 60s");
 		c6.style.animation = "";
-		setTimeout(() => c6.style.animation = "pulse1_c6 10s");
+		setTimeout(() => c6.style.animation = "pulse1_c6 60s");
 		c7.style.animation = "";
-		setTimeout(() => c7.style.animation = "pulse1_c7 10s");
+		setTimeout(() => c7.style.animation = "pulse1_c7 60s");
 		c8.style.animation = "";
-		setTimeout(() => c8.style.animation = "pulse1_c8 10s");
+		setTimeout(() => c8.style.animation = "pulse1_c8 60s");
 		c9.style.animation = "";
-		setTimeout(() => c9.style.animation = "pulse1_c9 10s");
+		setTimeout(() => c9.style.animation = "pulse1_c9 60s");
 		c10.style.animation = "";
-		setTimeout(() => c10.style.animation = "pulse1_c10 10s");
+		setTimeout(() => c10.style.animation = "pulse1_c10 60s");
 		c11.style.animation = "";
-		setTimeout(() => c11.style.animation = "pulse1_c11 10s");
+		setTimeout(() => c11.style.animation = "pulse1_c11 60s");
 	})
 	
 	const conj_2 = document.getElementById("botao_2");
 	
 	conj_2.addEventListener("click", ()=> {
 		c1.style.animation = "";
-		setTimeout(() => c1.style.animation = "pulse2_c1 10s");
+		setTimeout(() => c1.style.animation = "pulse2_c1 60s");
 		c2.style.animation = "";
-		setTimeout(() => c2.style.animation = "pulse2_c2 10s");
+		setTimeout(() => c2.style.animation = "pulse2_c2 60s");
 		c3.style.animation = "";
-		setTimeout(() => c3.style.animation = "pulse2_c3 10s");
+		setTimeout(() => c3.style.animation = "pulse2_c3 60s");
 		c4.style.animation = "";
-		setTimeout(() => c4.style.animation = "pulse2_c4 10s");
+		setTimeout(() => c4.style.animation = "pulse2_c4 60s");
 		c5.style.animation = "";
-		setTimeout(() => c5.style.animation = "pulse2_c5 10s");
+		setTimeout(() => c5.style.animation = "pulse2_c5 60s");
 		c6.style.animation = "";
-		setTimeout(() => c6.style.animation = "pulse2_c6 10s");
+		setTimeout(() => c6.style.animation = "pulse2_c6 60s");
 		c7.style.animation = "";
-		setTimeout(() => c7.style.animation = "pulse2_c7 10s");
+		setTimeout(() => c7.style.animation = "pulse2_c7 60s");
 		c8.style.animation = "";
-		setTimeout(() => c8.style.animation = "pulse2_c8 10s");
+		setTimeout(() => c8.style.animation = "pulse2_c8 60s");
 		c9.style.animation = "";
-		setTimeout(() => c9.style.animation = "pulse2_c9 10s");
+		setTimeout(() => c9.style.animation = "pulse2_c9 60s");
 		c10.style.animation = "";
-		setTimeout(() => c10.style.animation = "pulse2_c10 10s");
+		setTimeout(() => c10.style.animation = "pulse2_c10 60s");
 		c11.style.animation = "";
-		setTimeout(() => c11.style.animation = "pulse2_c11 10s");
+		setTimeout(() => c11.style.animation = "pulse2_c11 60s");
 	})
 
 	const conj_3 = document.getElementById("botao_3");
 	
 	conj_3.addEventListener("click", ()=> {
 		c1.style.animation = "";
-		setTimeout(() => c1.style.animation = "pulse3_c1 10s");
+		setTimeout(() => c1.style.animation = "pulse3_c1 60s");
 		c2.style.animation = "";
-		setTimeout(() => c2.style.animation = "pulse3_c2 10s");
+		setTimeout(() => c2.style.animation = "pulse3_c2 60s");
 		c3.style.animation = "";
-		setTimeout(() => c3.style.animation = "pulse3_c3 10s");
+		setTimeout(() => c3.style.animation = "pulse3_c3 60s");
 		c4.style.animation = "";
-		setTimeout(() => c4.style.animation = "pulse3_c4 10s");
+		setTimeout(() => c4.style.animation = "pulse3_c4 60s");
 		c5.style.animation = "";
-		setTimeout(() => c5.style.animation = "pulse3_c5 10s");
+		setTimeout(() => c5.style.animation = "pulse3_c5 60s");
 		c6.style.animation = "";
-		setTimeout(() => c6.style.animation = "pulse3_c6 10s");
+		setTimeout(() => c6.style.animation = "pulse3_c6 60s");
 		c7.style.animation = "";
-		setTimeout(() => c7.style.animation = "pulse3_c7 10s");
+		setTimeout(() => c7.style.animation = "pulse3_c7 60s");
 		c8.style.animation = "";
-		setTimeout(() => c8.style.animation = "pulse3_c8 10s");
+		setTimeout(() => c8.style.animation = "pulse3_c8 60s");
 		c9.style.animation = "";
-		setTimeout(() => c9.style.animation = "pulse3_c9 10s");
+		setTimeout(() => c9.style.animation = "pulse3_c9 60s");
 		c10.style.animation = "";
-		setTimeout(() => c10.style.animation = "pulse3_c10 10s");
+		setTimeout(() => c10.style.animation = "pulse3_c10 60s");
 		c11.style.animation = "";
-		setTimeout(() => c11.style.animation = "pulse3_c11 10s");
+		setTimeout(() => c11.style.animation = "pulse3_c11 60s");
 	})
 	
 	const conj_4 = document.getElementById("botao_4");
 	
 	conj_4.addEventListener("click", ()=> {
 		c1.style.animation = "";
-		setTimeout(() => c1.style.animation = "pulse4_c1 10s");
+		setTimeout(() => c1.style.animation = "pulse4_c1 60s");
 		c2.style.animation = "";
-		setTimeout(() => c2.style.animation = "pulse4_c2 10s");
+		setTimeout(() => c2.style.animation = "pulse4_c2 60s");
 		c3.style.animation = "";
-		setTimeout(() => c3.style.animation = "pulse4_c3 10s");
+		setTimeout(() => c3.style.animation = "pulse4_c3 60s");
 		c4.style.animation = "";
-		setTimeout(() => c4.style.animation = "pulse4_c4 10s");
+		setTimeout(() => c4.style.animation = "pulse4_c4 60s");
 		c5.style.animation = "";
-		setTimeout(() => c5.style.animation = "pulse4_c5 10s");
+		setTimeout(() => c5.style.animation = "pulse4_c5 60s");
 		c6.style.animation = "";
-		setTimeout(() => c6.style.animation = "pulse4_c6 10s");
+		setTimeout(() => c6.style.animation = "pulse4_c6 60s");
 		c7.style.animation = "";
-		setTimeout(() => c7.style.animation = "pulse4_c7 10s");
+		setTimeout(() => c7.style.animation = "pulse4_c7 60s");
 		c8.style.animation = "";
-		setTimeout(() => c8.style.animation = "pulse4_c8 10s");
+		setTimeout(() => c8.style.animation = "pulse4_c8 60s");
 		c9.style.animation = "";
-		setTimeout(() => c9.style.animation = "pulse4_c9 10s");
+		setTimeout(() => c9.style.animation = "pulse4_c9 60s");
 		c10.style.animation = "";
-		setTimeout(() => c10.style.animation = "pulse4_c10 10s");
+		setTimeout(() => c10.style.animation = "pulse4_c10 60s");
 		c11.style.animation = "";
-		setTimeout(() => c11.style.animation = "pulse4_c11 10s");
+		setTimeout(() => c11.style.animation = "pulse4_c11 60s");
 	})
 	
 	</script>
@@ -224,6 +224,40 @@
 		
 	</div>
 
+	<h1></h1>
+	
+	<p class="texto">Eis abaixo a tabela com as propriedades comuns aos 4 conjuntos:</p>
+	<h1></h1>
+	<table width="1500px" class="tabela" border="1">
+    <tr>
+        <td>Média de x</td>
+        <td>9</td>
+    </tr>
+    <tr>
+        <td>Variância de x</td>
+        <td>11</td>
+    </tr>
+    <tr>
+        <td>Média de y</td>
+        <td>7,5</td>
+    </tr>
+    <tr>
+        <td>Variância de y</td>
+        <td>4,125</td>
+    </tr>
+    <tr>
+        <td>Correlação entre x e y</td>
+        <td>0,816</td>
+    </tr>
+    <tr>
+        <td> Reta de regressão linear </td>
+        <td> y = 0,5x + 3 </td>
+    </tr>
+    <tr>
+        <td>R²</td>
+        <td>0,67</td>
+    </tr>
+</table>
 
 	</body>
 	
