--- a/flor2.html
+++ b/flor2.html
@@ -13,7 +13,7 @@
 
 	<p><h1>O Diagrama da Flor(ence)</h1></p>
 	
-	<p class="texto"> Enquanto Florence Nightingale (1820-1910) trabalhava cuidando de soldados enfermos na Guerra da Crimeia (1853-1856), ela </p>
+	<p class="texto"> Enquanto Florence Nightingale (1820-1910) trabalhava cuidando de soldados enfermos na Guerra da Crimeia (1853-1856) ela </p>
 	<p class="texto"> percebeu que as infecções hospitalares e as más condições de cuidados com os pacientes matavam mais do que as batalhas, </p>
 	<p class="texto"> iniciando assim uma análise estatística do tema. Como se pode ver, o diagrama revelou que a maioria dos soldados morria por </p>
 	<p class="texto"> conta de doenças infecciosas, que seriam facilmente evitadas se o governo investisse em saneamento básico e práticas de higienização. </p>
