--- a/copas5.html
+++ b/copas5.html
@@ -238,38 +238,6 @@
 	</div>
 </div>
 
-<!-- <div class="brasil">
-<div class="brasil1">
-	<svg width="40" height="30">
-		<rect width="40" height="30" stroke="black" fill="rgba(1,1,1,0)"></rect>
-	</svg>
-</div>
-
-<div class="brasil2">
-	<svg width="40" height="30">
-		<rect width="40" height="30" stroke="black" fill="rgba(1,1,1,0)"></rect>
-	</svg>
-</div>
-
-<div class="brasil3">
-	<svg width="40" height="30">
-		<rect width="40" height="30" stroke="black" fill="rgba(1,1,1,0)"></rect>
-	</svg>
-</div>
-
-<div class="brasil4">
-	<svg width="40" height="30">
-		<rect width="40" height="30" stroke="black" fill="rgba(1,1,1,0)"></rect>
-	</svg>
-</div>
-
-<div class="brasil5">
-	<svg width="40" height="30">
-		<rect width="40" height="30" stroke="black" fill="rgba(1,1,1,0)"></rect>
-	</svg>
-</div>
-</div> -->
-
 <script>
 let brasil = document.querySelector(".c1");
 </script>
@@ -610,10 +578,12 @@ let brasil2 = document.querySelector(".c1");
 		</svg>
 	</div>
 </div>
+
+
 	
 		<div id="footer">
 		<div class="eixox">
-			<div class="x1">1930</div>	
+			<div class="x1">    1930    </div>	
 			<div class="x2">1934</div>
 			<div class="x3">1938</div>
 			<div class="x4">1942</div>
@@ -637,24 +607,230 @@ let brasil2 = document.querySelector(".c1");
 			<div class="x22">2014</div>
 			<div class="x23">2018</div>
 			<div class="x24">2022</div>
+
+<!--%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% SEDES %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%-->
+
+<div class="sedes">
+	<div class="uru_sede1930">
+		<svg width="40" height="30">
+			<rect x="16" y="3.33" width="24" height="3.33" fill="blue"></rect>
+			<rect x="16" y="9.99" width="24" height="3.33" fill="blue"></rect>
+			<rect y="16.65" width="40" height="3.33" fill="blue"></rect>
+			<rect y="23.31" width="40" height="3.33" fill="blue"></rect>
+			<circle cx="8" cy="8" r="5" fill="gold"></circle>
+		</svg>
+	</div>
+	<div class="ita_sede1934">
+		<svg width="40" height="30">
+			<rect width="13.5" height="30" fill="green"></rect>
+			<rect x="26.5" width="13.5" height="30" fill="red"></rect>
+		</svg>
+	</div>
+	<div class="fra_sede1938">
+		<svg width="40" height="30">
+			<rect x="26.7" width="13.3" height="30" fill="red"></rect>
+			<rect width="13.3" height="30" fill="blue"></rect>
+		</svg>
+	</div>
+	<div class="bra_sede1950">
+		<svg width="40" height="30">
+			<path d="M 20 3 L 37 15 20 27 3 15 Z" fill="gold"></path>
+			<circle cx="20" cy="15" r="7" fill="blue"></circle>
+		</svg>
+	</div>
+	<div class="sui_sede1954">
+		<svg width="40" height="30">
+			<rect x="11" y="12" width="18" height="6" fill="white"></rect>
+			<rect x="17" y="6" width="6" height="18" fill="white"></rect>
+		</svg>
+	</div>
+	<div class="sue_sede1958">
+		<svg width="40" height="30">
+			<rect y="12" width="40" height="6" fill="yellow"></rect>
+			<rect x="8" width="6" height="30" fill="yellow"></rect>
+		</svg>
+	</div>
+	<div class="chi_sede1962">
+		<svg width="40" height="30">
+			<rect x="15" width="25" height="15" fill="white"></rect>
+			<rect width="15" height="15" fill="blue"></rect>
+			<circle cx="7.5" cy="7.5" r="4" fill="white"></circle>
+		</svg>
+	</div>
+	<div class="ing_sede1966">
+		<svg width="40" height="30">
+			<rect x="17" width="6" height="30" fill="red"></rect>
+			<rect y="12" width="40" height="6" fill="red"></rect>
+		</svg>
+	</div>
+	<div class="mex_sede1970">
+		<svg width="40" height="30">
+			<rect width="13.5" height="30" fill="green"></rect>
+			<rect x="26.5" width="13.5" height="30" fill="red"></rect>
+			<circle cx="20" cy="15" r="4" fill="brown"></circle>
+		</svg>
+	</div>
+	<div class="ale_sede1974">
+		<svg width="40" height="30">
+			<rect y="10" width="40" height="10" fill="red"></rect>
+			<rect y="20" width="40" height="10" fill="gold"></rect>
+		</svg>
+	</div>
+	<div class="arg_sede1978">
+		<svg width="40" height="30">
+			<rect y="10" width="40" height="10" fill="white"></rect>
+			<circle cx="20" cy="15" r="4" fill="gold"></circle>
+		</svg>
+	</div>
+	<div class="esp_sede1982">
+		<svg width="40" height="30">
+			<rect y="8" width="40" height="14" fill="yellow"></rect>
+			<circle cx="13" cy="15" r="5" fill="orange"></circle>
+		</svg>
+	</div>
+	<div class="mex_sede1986">
+		<svg width="40" height="30">
+			<rect width="13.5" height="30" fill="green"></rect>
+			<rect x="26.5" width="13.5" height="30" fill="red"></rect>
+			<circle cx="20" cy="15" r="4" fill="brown"></circle>
+		</svg>
+	</div>
+	<div class="ita_sede1990">
+		<svg width="40" height="30">
+			<rect width="13.5" height="30" fill="green"></rect>
+			<rect x="26.5" width="13.5" height="30" fill="red"></rect>
+		</svg>
+	</div>
+	<div class="eua_sede1994">
+		<svg width="40" height="30">
+			<rect width="17" height="16.1" fill="blue"></rect>
+			<rect x="17" y="2.3" width="23" height="2.3" fill="white"></rect>
+			<rect x="17" y="6.9" width="23" height="2.3" fill="white"></rect>
+			<rect x="17" y="11.5" width="23" height="2.3" fill="white"></rect>
+			<rect y="16.1" width="40" height="2.3" fill="white"></rect>
+			<rect y="20.7" width="40" height="2.3" fill="white"></rect>
+			<rect y="25.3" width="40" height="2.3" fill="white"></rect>
+			<circle cx="1" cy="1" r="0.5" fill="white"></circle>
+			<circle cx="1" cy="4" r="0.5" fill="white"></circle>
+			<circle cx="1" cy="7" r="0.5" fill="white"></circle>
+			<circle cx="1" cy="10" r="0.5" fill="white"></circle>
+			<circle cx="1" cy="13" r="0.5" fill="white"></circle>
+			<circle cx="4" cy="1" r="0.5" fill="white"></circle>
+			<circle cx="4" cy="4" r="0.5" fill="white"></circle>
+			<circle cx="4" cy="7" r="0.5" fill="white"></circle>
+			<circle cx="4" cy="10" r="0.5" fill="white"></circle>
+			<circle cx="4" cy="13" r="0.5" fill="white"></circle>
+			<circle cx="7" cy="1" r="0.5" fill="white"></circle>
+			<circle cx="7" cy="4" r="0.5" fill="white"></circle>
+			<circle cx="7" cy="7" r="0.5" fill="white"></circle>
+			<circle cx="7" cy="10" r="0.5" fill="white"></circle>
+			<circle cx="7" cy="13" r="0.5" fill="white"></circle>
+			<circle cx="10" cy="1" r="0.5" fill="white"></circle>
+			<circle cx="10" cy="4" r="0.5" fill="white"></circle>
+			<circle cx="10" cy="7" r="0.5" fill="white"></circle>
+			<circle cx="10" cy="10" r="0.5" fill="white"></circle>
+			<circle cx="10" cy="13" r="0.5" fill="white"></circle>
+			<circle cx="14" cy="1" r="0.5" fill="white"></circle>
+			<circle cx="14" cy="4" r="0.5" fill="white"></circle>
+			<circle cx="14" cy="7" r="0.5" fill="white"></circle>
+			<circle cx="14" cy="10" r="0.5" fill="white"></circle>
+			<circle cx="14" cy="13" r="0.5" fill="white"></circle>
+			<circle cx="17" cy="1" r="0.5" fill="white"></circle>
+			<circle cx="17" cy="4" r="0.5" fill="white"></circle>
+			<circle cx="17" cy="7" r="0.5" fill="white"></circle>
+			<circle cx="17" cy="10" r="0.5" fill="white"></circle>
+			<circle cx="17" cy="13" r="0.5" fill="white"></circle>
+
+		</svg>
+	</div>
+	<div class="fra_sede1998">
+		<svg width="40" height="30">
+			<rect x="26.7" width="13.3" height="30" fill="red"></rect>
+			<rect width="13.3" height="30" fill="blue"></rect>
+		</svg>
+	</div>
+	<div class="cor_sede2002">
+		<svg width="40" height="30">
+			<circle cx="20" cy="15" r="7" fill="blue"></circle>
+			<path d="M 13 15 Q 16.5 18 20 15 T 27 15 C 27 5 13 5 13 15" fill="red"></path>
+			<rect x="8" y="5.5" width="4" height="4" fill="black"></rect>
+			<rect x="8" y="20.5" width="4" height="4" fill="black"></rect>
+			<rect x="28" y="20.5" width="4" height="4" fill="black"></rect>
+			<rect x="28" y="5.5" width="4" height="4" fill="black"></rect>
+		</svg>
+	</div>
+	<div class="jap_sede2002">
+		<svg width="40" height="30">
+			<circle cx="20" cy="15" r="8" fill="red"></circle>
+		</svg>
+	</div>
+	<div class="ale_sede2006">
+		<svg width="40" height="30">
+			<rect y="10" width="40" height="10" fill="red"></rect>
+			<rect y="20" width="40" height="10" fill="gold"></rect>
+		</svg>
+	</div>
+	<div class="afr_sede2010">
+		<svg width="40" height="30">
+			<path d="M 6 0 L 20 12 40 12 40 18 20 18 6 30 0 30 0 27 14 15 0 3 0 0 Z" fill="green"></path>
+			<path d="M 0 3 L 14 15 0 27 Z" fill="gold"></path>
+			<path d="M 0 6 L 11 15 0 24 Z" fill="black"></path>
+			<path d="M 9 0 L 20 10 40 10 40 0 Z" fill="red"></path>
+			<path d="M 9 30 L 20 20 40 20 40 30 Z" fill="blue"></path>
+		</svg>
+	</div>
+	<div class="bra_sede2014">
+		<svg width="40" height="30">
+			<path d="M 20 3 L 37 15 20 27 3 15 Z" fill="gold"></path>
+			<circle cx="20" cy="15" r="7" fill="blue"></circle>
+		</svg>
+	</div>
+	<div class="rus_sede2018">
+		<svg width="40" height="30">
+			<rect y="10" width="40" height="10" fill="blue"></rect>
+			<rect y="20" width="40" height="10" fill="red"></rect>
+		</svg>
+	</div>
+	<div class="cat_sede2022">
+		<svg width="40" height="30">
+			<rect x="15" width="25" height="30" fill="darkred"></rect>
+		</svg>
+	</div>
+</div>
 			
 		</div>	
 		</div>	
 			
 		</div>
 
-	<!-- <svg width="1300" height="620" >
-	</svg> -->
-
 	</div>
-
-	<!-- <div class="bras1">
-		<svg width="40" height="30">
-			<path d="M 20 3 L 37 15 20 27 3 15 Z" fill="gold"></path>
-			<circle cx="20" cy="15" r="7" fill="blue"></circle>
-		</svg>
-	</div> -->
 
 	</body>
 
 </html>
+
+<!-- SEDES
+
+1930 URUGUAI X
+1934 ITALIA X
+1938 FRANCA X
+1950 BRASIL X
+1954 SUICA 
+1958 SUECIA 
+1962 CHILE 
+1966 INGLATERRA X
+1970 MEXICO 
+1974 ALEMANHA X
+1978 ARGENTINA X
+1982 ESPANHA X
+1986 MEXICO 
+1990 ITALIA X
+1994 ESTADOS UNIDOS 
+1998 FRANCA X
+2002 COREIA DO SUL E JAPAO 
+2006 ALEMANHA X
+2010 AFRICA DO SUL 
+2014 BRASIL X
+2018 RUSSIA 
+2022 CATAR  
+-->
