--- a/copas8.html
+++ b/copas8.html
@@ -487,8 +487,8 @@ let brasil = document.querySelector(".c1");
 		</svg>
 	</div>
 	<div class="sede1942">
-		<svg width="40" height="45">
-			<rect id="ano1930" y="10" width="40" height="30" fill="rgba(1,1,1,0)"></rect>
+		<svg width="40" height="10">
+			<rect id="ano1930" y="2.5" width="40" height="30" fill="rgba(1,1,1,0)"></rect>
 			<text font-family="Verdana" font-size="14">
 				<textPath xlink:href="#ano1930" style="fill: white">
 				  1942
@@ -497,12 +497,21 @@ let brasil = document.querySelector(".c1");
 		</svg>
 	</div>
 	<div class="sede1946">
-		<svg width="40" height="45">
-			<rect id="ano1930" y="10" width="40" height="30" fill="rgba(1,1,1,0)"></rect>
-
+		<svg width="40" height="10">
+			<rect id="ano1930" y="2.5" width="40" height="30" fill="rgba(1,1,1,0)"></rect>
 			<text font-family="Verdana" font-size="14">
 				<textPath xlink:href="#ano1930" style="fill: white">
 				  1946
+				</textPath>
+			</text>
+		</svg>
+	</div>
+	<div class="guerra">
+		<svg width="100" height="20">
+			<rect id="guerra" y="18" width="100" height="20" fill="rgba(1,1,1,0)"></rect>
+			<text font-family="Verdana" font-size="9">
+				<textPath xlink:href="#guerra" style="fill: white">
+				  2ª Guerra Mundial
 				</textPath>
 			</text>
 		</svg>
